--- a/.github/workflows/mlg-diffusers.yml
+++ b/.github/workflows/mlg-diffusers.yml
@@ -25,18 +25,48 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Pull the latest images for caching
+      run: |
+        docker pull ghcr.io/premai-io/michelangelo-stable-diffusion-2-1-base-cpu:latest || true
+        docker pull ghcr.io/premai-io/michelangelo-stable-diffusion-2-base-cpu:latest || true
+        docker pull ghcr.io/premai-io/michelangelo-stable-diffusion-2-1-base-gpu:latest || true
+        docker pull ghcr.io/premai-io/michelangelo-stable-diffusion-2-base-gpu:latest || true
+
     - name: Test the Images
       run: |
-        docker build --file ./mlg-diffusers/docker/cpu/Dockerfile --build-arg="MODEL_ID=stabilityai/stable-diffusion-2-1-base" --tag mlg-diffusers-cpu ./mlg-diffusers
+        docker build --pull \
+          --cache-from=ghcr.io/premai-io/michelangelo-stable-diffusion-2-1-base-cpu:latest \
+          --file ./mlg-diffusers/docker/cpu/Dockerfile \
+          --build-arg="MODEL_ID=stabilityai/stable-diffusion-2-1-base" \
+          --tag mlg-diffusers-cpu ./mlg-diffusers
         docker run --rm mlg-diffusers-cpu pytest
 
-        docker build --file ./mlg-diffusers/docker/cpu/Dockerfile --build-arg="MODEL_ID=stabilityai/stable-diffusion-2-base" --tag mlg-diffusers-cpu ./mlg-diffusers
+        docker build --pull \
+          --cache-from=ghcr.io/premai-io/michelangelo-stable-diffusion-2-base-cpu:latest \
+          --file ./mlg-diffusers/docker/cpu/Dockerfile \
+          --build-arg="MODEL_ID=stabilityai/stable-diffusion-2-base" \
+          --tag mlg-diffusers-cpu ./mlg-diffusers
         docker run --rm mlg-diffusers-cpu pytest
 
-        docker build --file ./mlg-diffusers/docker/gpu/Dockerfile --build-arg="MODEL_ID=stabilityai/stable-diffusion-2-1-base" --tag mlg-diffusers-gpu ./mlg-diffusers
+        docker build --pull \
+          --cache-from=ghcr.io/premai-io/michelangelo-stable-diffusion-2-1-base-gpu:latest \
+          --file ./mlg-diffusers/docker/gpu/Dockerfile \
+          --build-arg="MODEL_ID=stabilityai/stable-diffusion-2-1-base" \
+          --tag mlg-diffusers-gpu ./mlg-diffusers
         docker run --rm --gpus all mlg-diffusers-gpu pytest
 
-        docker build --file ./mlg-diffusers/docker/gpu/Dockerfile --build-arg="MODEL_ID=stabilityai/stable-diffusion-2-base" --tag mlg-diffusers-gpu ./mlg-diffusers
+        docker build --pull \
+          --cache-from=ghcr.io/premai-io/michelangelo-stable-diffusion-2-base-gpu:latest \
+          --file ./mlg-diffusers/docker/gpu/Dockerfile \
+          --build-arg="MODEL_ID=stabilityai/stable-diffusion-2-base" \
+          --tag mlg-diffusers-gpu ./mlg-diffusers
         docker run --rm --gpus all mlg-diffusers-gpu pytest
 
   push-mlg-diffusers:
@@ -67,8 +97,28 @@ jobs:
 
     - name: Build and Push
       run: |
-        docker buildx build --push --file ./mlg-diffusers/docker/cpu/Dockerfile --build-arg="MODEL_ID=stabilityai/stable-diffusion-2-1-base" --tag ghcr.io/premai-io/michelangelo-stable-diffusion-2-1-base-cpu:latest --platform linux/arm64,linux/amd64 ./mlg-diffusers
-        docker buildx build --push --file ./mlg-diffusers/docker/cpu/Dockerfile --build-arg="MODEL_ID=stabilityai/stable-diffusion-2-base" --tag ghcr.io/premai-io/michelangelo-stable-diffusion-2-base-cpu:latest --platform linux/arm64,linux/amd64 ./mlg-diffusers
+        docker buildx build --push --pull \
+          --cache-from=ghcr.io/premai-io/michelangelo-stable-diffusion-2-1-base-cpu:latest \
+          --file ./mlg-diffusers/docker/cpu/Dockerfile \
+          --build-arg="MODEL_ID=stabilityai/stable-diffusion-2-1-base" \
+          --tag ghcr.io/premai-io/michelangelo-stable-diffusion-2-1-base-cpu:latest \
+          --platform linux/arm64,linux/amd64 ./mlg-diffusers
+        docker buildx build --push --pull \
+          --cache-from=ghcr.io/premai-io/michelangelo-stable-diffusion-2-base-cpu:latest \
+          --file ./mlg-diffusers/docker/cpu/Dockerfile \
+          --build-arg="MODEL_ID=stabilityai/stable-diffusion-2-base" \
+          --tag ghcr.io/premai-io/michelangelo-stable-diffusion-2-base-cpu:latest \
+          --platform linux/arm64,linux/amd64 ./mlg-diffusers
 
-        docker buildx build --push --file ./mlg-diffusers/docker/gpu/Dockerfile --build-arg="MODEL_ID=stabilityai/stable-diffusion-2-1-base" --tag ghcr.io/premai-io/michelangelo-stable-diffusion-2-1-base-gpu:latest --platform linux/amd64 ./mlg-diffusers
-        docker buildx build --push --file ./mlg-diffusers/docker/gpu/Dockerfile --build-arg="MODEL_ID=stabilityai/stable-diffusion-2-base" --tag ghcr.io/premai-io/michelangelo-stable-diffusion-2-base-gpu:latest --platform linux/amd64 ./mlg-diffusers
+        docker buildx build --push --pull \
+          --cache-from=ghcr.io/premai-io/michelangelo-stable-diffusion-2-1-base-gpu:latest \
+          --file ./mlg-diffusers/docker/gpu/Dockerfile \
+          --build-arg="MODEL_ID=stabilityai/stable-diffusion-2-1-base" \
+          --tag ghcr.io/premai-io/michelangelo-stable-diffusion-2-1-base-gpu:latest \
+          --platform linux/amd64 ./mlg-diffusers
+        docker buildx build --push --pull \
+          --cache-from=ghcr.io/premai-io/michelangelo-stable-diffusion-2-base-gpu:latest \
+          --file ./mlg-diffusers/docker/gpu/Dockerfile \
+          --build-arg="MODEL_ID=stabilityai/stable-diffusion-2-base" \
+          --tag ghcr.io/premai-io/michelangelo-stable-diffusion-2-base-gpu:latest \
+          --platform linux/amd64 ./mlg-diffusers
