--- a/.github/workflows/cht-dolly-v2.yml
+++ b/.github/workflows/cht-dolly-v2.yml
@@ -25,9 +25,26 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Pull the latest images for caching
+      run: |
+        docker pull ghcr.io/premai-io/chat-dolly-v2-12b-gpu:latest || true
+
     - name: Test the Images
       run: |
-        docker build --file ./cht-dolly-v2/docker/gpu/Dockerfile --build-arg="MODEL_ID=databricks/dolly-v2-12b" --tag cht-dolly-v2 ./cht-dolly-v2
+        docker build --pull \
+          --cache-from ghcr.io/premai-io/chat-dolly-v2-12b-gpu:latest \
+          --file ./cht-dolly-v2/docker/gpu/Dockerfile \
+          --build-arg="MODEL_ID=databricks/dolly-v2-12b" \
+          --tag cht-dolly-v2 ./cht-dolly-v2
+    - name: Test the Container
+      run: |
         docker run --rm --gpus all cht-dolly-v2 pytest
 
   push-cht-dolly-v2:
@@ -57,4 +74,11 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Build and Push
-      run: docker buildx build --push --file ./cht-dolly-v2/docker/gpu/Dockerfile --build-arg="MODEL_ID=databricks/dolly-v2-12b" --tag ghcr.io/premai-io/chat-dolly-v2-12b-gpu:latest --platform linux/amd64 ./chat-dolly-v2
+      run: |
+        docker buildx create --use
+        docker buildx build --push --pull \
+          --cache-from ghcr.io/premai-io/chat-dolly-v2-12b-gpu:latest \
+          --file ./cht-dolly-v2/docker/gpu/Dockerfile \
+          --build-arg="MODEL_ID=databricks/dolly-v2-12b" \
+          --tag ghcr.io/premai-io/chat-dolly-v2-12b-gpu:latest \
+          --platform linux/amd64 ./chat-dolly-v2
