--- a/.github/workflows/cht-llama-cpp.yml
+++ b/.github/workflows/cht-llama-cpp.yml
@@ -25,9 +25,27 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Pull the latest images for caching
+      run: |
+        docker pull ghcr.io/premai-io/chat-vicuna-7b-q4-cpu:latest  || true
+        docker pull ghcr.io/premai-io/chat-gpt4all-lora-q4-cpu:latest || true
+
     - name: Build and Test
       run: |
-        docker build --file ./cht-llama-cpp/docker/cpu/Dockerfile --build-arg="MODEL_ID=vicuna-7b-q4" --tag cht-llama-cpp ./cht-llama-cpp
+        docker build --pull \
+          --cache-from ghcr.io/premai-io/chat-vicuna-7b-q4-cpu:latest \
+          --file ./cht-llama-cpp/docker/cpu/Dockerfile \
+          --build-arg="MODEL_ID=vicuna-7b-q4" \
+          --tag cht-llama-cpp ./cht-llama-cpp
+    - name: Test
+      run: |
         docker run --rm cht-llama-cpp pytest
 
   push-cht-llama-cpp:
@@ -58,5 +76,16 @@ jobs:
 
     - name: Build and Push
       run: |
-        docker buildx build --file ./cht-llama-cpp/docker/cpu/Dockerfile --build-arg="MODEL_ID=vicuna-7b-q4" --tag ghcr.io/premai-io/chat-vicuna-7b-q4-cpu:latest --platform linux/arm64,linux/amd64 ./cht-llama-cpp
-        docker buildx build --file ./cht-llama-cpp/docker/cpu/Dockerfile --build-arg="MODEL_ID=gpt4all-lora-q4" --tag ghcr.io/premai-io/chat-gpt4all-lora-q4-cpu:latest --platform linux/arm64,linux/amd64 ./cht-llama-cpp
+        docker buildx create --use
+        docker buildx build --pull \
+          --cache-from ghcr.io/premai-io/chat-vicuna-7b-q4-cpu:latest \
+          --file ./cht-llama-cpp/docker/cpu/Dockerfile \
+          --build-arg="MODEL_ID=vicuna-7b-q4" \
+          --tag ghcr.io/premai-io/chat-vicuna-7b-q4-cpu:latest \
+          --platform linux/arm64,linux/amd64 ./cht-llama-cpp
+        docker buildx build --pull \
+          --cache-from ghcr.io/premai-io/chat-gpt4all-lora-q4-cpu:latest \
+          --file ./cht-llama-cpp/docker/cpu/Dockerfile \
+          --build-arg="MODEL_ID=gpt4all-lora-q4" \
+          --tag ghcr.io/premai-io/chat-gpt4all-lora-q4-cpu:latest \
+          --platform linux/arm64,linux/amd64 ./cht-llama-cpp
