--- a/.github/workflows/t2a-bark.yml
+++ b/.github/workflows/t2a-bark.yml
@@ -38,7 +38,7 @@ jobs:
         docker pull ghcr.io/premai-io/text-to-audio-bark-gpu:latest || true
 
     - name: Build the CPU Images
-      run: docker build --pull \
+      run: docker build \
         --cache-from=ghcr.io/premai-io/text-to-audio-bark-cpu:latest \
         --file ./t2a-bark/docker/cpu/Dockerfile \
         --tag t2a-bark-cpu ./t2a-bark
@@ -47,7 +47,7 @@ jobs:
       run: docker run --rm t2a-bark-cpu pytest
 
     - name: Build the GPU Images
-      run: docker build --pull \
+      run: docker build \
         --cache-from=ghcr.io/premai-io/text-to-audio-bark-gpu:latest \
         --file ./t2a-bark/docker/gpu/Dockerfile \
         --tag t2a-bark-gpu ./t2a-bark
@@ -84,12 +84,12 @@ jobs:
     - name: Build and Push
       run: |
         docker buildx create --use
-        docker buildx build --push --pull \
+        docker buildx build --push \
           --cache-from=ghcr.io/premai-io/text-to-audio-bark-cpu:latest \
           --file ./t2a-bark/docker/cpu/Dockerfile \
           --tag ghcr.io/premai-io/text-to-audio-bark-cpu:latest \
           --platform linux/arm64,linux/amd64 ./t2a-bark
-        docker buildx build --push --pull \
+        docker buildx build --push \
           --cache-from=ghcr.io/premai-io/text-to-audio-bark-gpu:latest \
           --file ./t2a-bark/docker/gpu/Dockerfile \
           --tag ghcr.io/premai-io/text-to-audio-bark-gpu:latest \
