--- a/.github/workflows/cht-dolly-v2.yml
+++ b/.github/workflows/cht-dolly-v2.yml
@@ -17,39 +17,8 @@ on:
       - "cht-dolly-v2/**"
 
 jobs:
-  test-cht-dolly-v2:
+  build-test-push-cht-dolly-v2:
     runs-on: gpu
-    permissions:
-      contents: read
-      packages: write
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Login to GitHub Container Registry
-      uses: docker/login-action@v2
-      with:
-        registry: ghcr.io
-        username: ${{ github.repository_owner }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Pull the latest images for caching
-      run: |
-        docker pull ghcr.io/premai-io/chat-dolly-v2-12b-gpu:latest || true
-
-    - name: Build and Test the Images
-      run: |
-        docker build --pull \
-          --cache-from ghcr.io/premai-io/chat-dolly-v2-12b-gpu:latest \
-          --file ./cht-dolly-v2/docker/gpu/Dockerfile \
-          --build-arg="MODEL_ID=databricks/dolly-v2-12b" \
-          --tag cht-dolly-v2 ./cht-dolly-v2
-    - name: Test the Container
-      run: |
-        docker run --gpus all cht-dolly-v2 pytest
-
-  push-cht-dolly-v2:
-    runs-on: gpu
-    needs: [test-cht-dolly-v2]
     permissions:
       contents: read
       packages: write
@@ -73,12 +42,24 @@ jobs:
         username: ${{ github.repository_owner }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Build and Push
+    - name: Pull the latest images for caching
+      run: |
+        docker pull ghcr.io/premai-io/chat-dolly-v2-12b-gpu:latest || true
+
+    - name: Build and Test the Images
       run: |
         docker buildx create --use
-        docker buildx build --push --pull \
+        docker buildx build \
           --cache-from ghcr.io/premai-io/chat-dolly-v2-12b-gpu:latest \
           --file ./cht-dolly-v2/docker/gpu/Dockerfile \
           --build-arg="MODEL_ID=databricks/dolly-v2-12b" \
           --tag ghcr.io/premai-io/chat-dolly-v2-12b-gpu:latest \
           --platform linux/amd64 ./cht-dolly-v2
+
+    - name: Test the Container
+      run: |
+        docker run --gpus all ghcr.io/premai-io/chat-dolly-v2-12b-gpu:latest pytest
+
+    - name: Build and Push
+      run: |
+        docker push ghcr.io/premai-io/chat-dolly-v2-12b-gpu:latest
