--- a/.github/workflows/cht-dolly-v2.yml
+++ b/.github/workflows/cht-dolly-v2.yml
@@ -6,10 +6,6 @@ env:
   COMPOSE_DOCKER_CLI_BUILD: 1
 
 on:
-  pull_request:
-    branches: ["main"]
-    paths:
-      - "cht-dolly-v2/**"
 
   push:
     branches: ["main"]
@@ -22,7 +18,6 @@ jobs:
     permissions:
       contents: read
       packages: write
-    if: github.event_name == 'push'
     steps:
     - uses: actions/checkout@v3
 
@@ -46,7 +41,7 @@ jobs:
       run: |
         docker pull ghcr.io/premai-io/chat-dolly-v2-12b-gpu:latest || true
 
-    - name: Build and Test the Images
+    - name: Build
       run: |
         docker buildx create --use
         docker buildx build \
@@ -56,10 +51,10 @@ jobs:
           --tag ghcr.io/premai-io/chat-dolly-v2-12b-gpu:latest \
           --platform linux/amd64 ./cht-dolly-v2
 
-    - name: Test the Container
+    - name: Test
       run: |
         docker run --gpus all ghcr.io/premai-io/chat-dolly-v2-12b-gpu:latest pytest
 
-    - name: Build and Push
+    - name: Push
       run: |
         docker push ghcr.io/premai-io/chat-dolly-v2-12b-gpu:latest
