--- a/.github/workflows/ebd-all-minilm.yml
+++ b/.github/workflows/ebd-all-minilm.yml
@@ -6,66 +6,17 @@ env:
   COMPOSE_DOCKER_CLI_BUILD: 1
 
 on:
-  pull_request:
-    branches: ["main"]
-    paths:
-      - "ebd-all-minilm/**"
-
   push:
     branches: ["main"]
     paths:
       - "ebd-all-minilm/**"
 
 jobs:
-  test-ebd-all-minilm:
+  build-test-push-ebd-all-minilm:
     runs-on: gpu
     permissions:
       contents: read
       packages: write
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Login to GitHub Container Registry
-      uses: docker/login-action@v2
-      with:
-        registry: ghcr.io
-        username: ${{ github.repository_owner }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Pull the latest images for caching
-      run: |
-        docker pull ghcr.io/premai-io/embeddings-all-minilm-l6-v2-cpu:latest || true
-        docker pull ghcr.io/premai-io/embeddings-all-minilm-l6-v2-gpu:latest || true
-
-    - name: Build the CPU Images
-      run: |
-        docker build \
-          --cache-from ghcr.io/premai-io/embeddings-all-minilm-l6-v2-cpu:latest \
-          --file ./ebd-all-minilm/docker/cpu/Dockerfile \
-          --build-arg="MODEL_ID=all-MiniLM-L6-v2" \
-          --tag ebd-all-minilm-cpu ./ebd-all-minilm
-    - name: Test the CPU Images
-      run: |
-        docker run --rm ebd-all-minilm-cpu pytest
-
-    - name: Build the GPU Images
-      run: |
-        docker build \
-          --cache-from ghcr.io/premai-io/embeddings-all-minilm-l6-v2-gpu:latest \
-          --file ./ebd-all-minilm/docker/gpu/Dockerfile \
-          --build-arg="MODEL_ID=all-MiniLM-L6-v2" \
-          --tag ebd-all-minilm-gpu ./ebd-all-minilm
-    - name: Test the GPU Images
-      run: |
-        docker run --rm --gpus all ebd-all-minilm-gpu pytest
-
-  push-ebd-all-minilm:
-    runs-on: gpu
-    needs: [test-ebd-all-minilm]
-    permissions:
-      contents: read
-      packages: write
-    if: github.event_name == 'push'
     steps:
     - uses: actions/checkout@v3
 
@@ -85,18 +36,39 @@ jobs:
         username: ${{ github.repository_owner }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Build and Push
+    - name: Pull the latest images for caching
+      run: |
+        docker pull ghcr.io/premai-io/embeddings-all-minilm-l6-v2-cpu:latest || true
+        docker pull ghcr.io/premai-io/embeddings-all-minilm-l6-v2-gpu:latest || true
+
+    - name: Build the CPU Images
       run: |
         docker buildx create --use
-        docker buildx build --push \
+        docker buildx build \
           --cache-from ghcr.io/premai-io/embeddings-all-minilm-l6-v2-cpu:latest \
           --file ./ebd-all-minilm/docker/cpu/Dockerfile \
           --build-arg="MODEL_ID=all-MiniLM-L6-v2" \
           --tag ghcr.io/premai-io/embeddings-all-minilm-l6-v2-cpu:latest \
           --platform linux/arm64,linux/amd64 ./ebd-all-minilm
-        docker buildx build --push \
+
+    - name: Test the CPU Images
+      run: |
+        docker run --rm ghcr.io/premai-io/embeddings-all-minilm-l6-v2-cpu:latest pytest
+
+    - name: Build the GPU Images
+      run: |
+        docker buildx build \
           --cache-from ghcr.io/premai-io/embeddings-all-minilm-l6-v2-gpu:latest \
           --file ./ebd-all-minilm/docker/gpu/Dockerfile \
           --build-arg="MODEL_ID=all-MiniLM-L6-v2" \
           --tag ghcr.io/premai-io/embeddings-all-minilm-l6-v2-gpu:latest \
           --platform linux/amd64 ./ebd-all-minilm
+
+    - name: Test the GPU Images
+      run: |
+        docker run --rm --gpus all ghcr.io/premai-io/embeddings-all-minilm-l6-v2-gpu:latest pytest
+
+    - name: Push
+      run: |
+        docker push ghcr.io/premai-io/embeddings-all-minilm-l6-v2-cpu:latest
+        docker push ghcr.io/premai-io/embeddings-all-minilm-l6-v2-gpu:latest
