--- a/.github/workflows/ebd-all-minilm.yml
+++ b/.github/workflows/ebd-all-minilm.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Build the CPU Images
       run: |
         docker buildx create --use
-        docker buildx build \
+        docker buildx build --push \
           --cache-from ghcr.io/premai-io/embeddings-all-minilm-l6-v2-cpu:latest \
           --file ./ebd-all-minilm/docker/cpu/Dockerfile \
           --build-arg="MODEL_ID=all-MiniLM-L6-v2" \
@@ -57,7 +57,7 @@ jobs:
 
     - name: Build the GPU Images
       run: |
-        docker buildx build \
+        docker buildx build --push \
           --cache-from ghcr.io/premai-io/embeddings-all-minilm-l6-v2-gpu:latest \
           --file ./ebd-all-minilm/docker/gpu/Dockerfile \
           --build-arg="MODEL_ID=all-MiniLM-L6-v2" \
@@ -67,8 +67,3 @@ jobs:
     - name: Test the GPU Images
       run: |
         docker run --rm --gpus all ghcr.io/premai-io/embeddings-all-minilm-l6-v2-gpu:latest pytest
-
-    - name: Push
-      run: |
-        docker push ghcr.io/premai-io/embeddings-all-minilm-l6-v2-cpu:latest
-        docker push ghcr.io/premai-io/embeddings-all-minilm-l6-v2-gpu:latest
